momentjs y posts dinamicos

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@ hacer menos alto el slider
 .bx-wrapper, .bx-viewport{
     height: 500px !important;
 }
+
+
+https://cdnjs.com/libraries/moment.js/
+
+moment().format("MMMM Do YYYY")
